--- a/package.json
+++ b/package.json
@@ -13,5 +13,13 @@
         "postcss": "^8.4.38",
         "tailwindcss": "^3.4.1",
         "vite": "^5.0"
+    },
+    "dependencies": {
+        "@vitejs/plugin-vue": "^5.0.4",
+        "vue": "^3.4.21",
+        "vue-loader": "^17.4.2",
+        "vue-router": "^4.3.0",
+        "vuetify": "^3.5.13",
+        "vuex": "^4.1.0"
     }
 }
